--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <body style="background-color: rgb(108, 44, 255);">
-        <h1> My name is Diana and I love Diluc.</h1>
-        <img src="the best diluc photo.jpg">
+    <body style="background-color: rgb(255, 44, 44);">
+        <p><h1 style="color: rgb(255, 255, 255); " >My name is Diana and I love Diluc.</h1></p>
+        <img src="the best diluc photo.jpg"> 
+
+        
     </body>
 </html>
