--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <body style="background-color: rgb(255, 44, 44);">
-        <p><h1 style="color: rgb(255, 255, 255); " >My name is Diana and I love Diluc.</h1></p>
+        <p><h1 style="color: rgb(255, 255, 255);
+        " >My name is Diana and I love Diluc.</h1></p>
         <img src="the best diluc photo.jpg"> 
 
-        
+
     </body>
 </html>
