--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <body style="background-color: rgb(255, 44, 44);">
-        <p><h1 style="color: rgb(255, 255, 255);
-        " >My name is Diana and I love Diluc.</h1></p>
-        <img src="the best diluc photo.jpg"> 
+    <head>
+    </head>
+    <body>
+        <p>once upon a time</p>
 
+        <h1>hello from pisay batch '27</h1>
+        <h2>hello from pisay batch '27</h2>
+        <h3>hello from pisay batch '27</h3>
+        <h4>hello from pisay batch '27</h4>
+        <h5>hello from pisay batch '27</h5>
+        <h6>hello from pisay batch '27</h6>
 
+        <b>Diana</b> <hr>
+        <i>Nicole</i> <hr>
+        Gaer
+
+        <ul>
+            <li>fries</li>
+            <li>burger</li>
+            <li>pizza</li>
+        </ul>
     </body>
 </html>
